Fix line spacing (#610)

--- a/src/style.css
+++ b/src/style.css
@@ -929,6 +929,11 @@ blockquote p:before {
   color: #ccc;
 }
 
+.rule-content p{
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
 /* Category List
 -------------------------------------------------- */
 
